--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 GOOGLE_CLIENT_ID=362289041960-0hqff2tu6ekeniibo4m6h5uan9s2d7m5.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET=T_rPfdSWRrtjjAPLdJ6FF9qZ
 SESSION_SECRET=cat
+MONGODB_URI="mongodb+srv://juanramirez:Pz57gmbZgbXPL5Z@cluster0.74lzt.mongodb.net/myFirstDatabase?retryWrites=true&w=majority"
